--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </ul>
         </div>
     <div class="text">
-        <h1>We are <span>Ronan Urot</span> and <span> Keinji Suan </span> a <br><div class="orange"><span>Future Developer</span> and <span>Future Programmer</span>.</br></h1>
+        <h1>We are <span>Ronan Urot</span> and <span> Keinji Suan </span> a <br><span1>Future Developer</span1> and <span1>Future Programmer</span1>.</br></h1>
     </div>
 </body>
 
