--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 <title>Portfolio</title>
 <link rel="stylesheet" href="css/style.css">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
     <div class="background">
         <div class="contents">
             <ul>
-                <li><a class="content" href="index.html">Home</a></li>
-                <li><a class="content" href="about.html">About Us</a></li>
-                <li><a class="content" href="activity.html">Activities</a></li>
-                <li><a class="content" href="contact.html">Contact Us</a></li>
+                <li><a class="content" href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a class="content" href="about.html"><i class="fa-solid fa-handshake-simple"></i>About Us</a></li>
+                <li><a class="content" href="activity.html"><i class="fa-solid fa-book"></i>Activities</a></li>
+                <li><a class="content" href="contact.html"><i class="fa-solid fa-phone"></i>Contact Us</a></li>
             </ul>
         </div>
     <div class="text">
