--- a/about.html
+++ b/about.html
@@ -4,4 +4,20 @@
 <title>About Us</title>
 <link rel="stylesheet" href="css/style.css">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
+
+<body>
+    <div class="background">
+        <div class="contents">
+            <ul>
+                <li><a class="content" href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a class="content" href="about.html"><i class="fa-solid fa-handshake-simple"></i>About Us</a></li>
+                <li><a class="content" href="activity.html"><i class="fa-solid fa-book"></i>Activities</a></li>
+                <li><a class="content" href="contact.html"><i class="fa-solid fa-phone"></i>Contact Us</a></li>
+            </ul>
+        </div>
+</body>
+
+</html>
