--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,16 @@
                 <li><a class="content" href="contact.html"><i class="fa-solid fa-phone"></i>Contact Us</a></li>
             </ul>
         </div>
+        <div class="card">
+            <h5>Ronan T. Urot</h5>
+		<div class="social">
+			<a href="https://www.facebook.com/ronan.urot.3"><i class="fab fa-facebook-f"></i></a>
+			<a href="https://discord.com/channels/@me"><i class="fab fa-discord"></i></a>
+			<a href="https://www.youtube.com/@RUCraftz"><i class="fab fa-youtube"></i></a>
+				<section id="media">
+					</section>
+		</div>
+    </div>
 </body>
 
 </html>
