--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,11 @@
         </div>
         <div class="card">
             <h5>Ronan T. Urot</h5>
+            <img src="images/me.jpg" alt="">
+        <div id="media">
+            <h3>Contacts</h3>
+            <h4>Social Medias</h4>
+        </div>
 		<div class="social">
 			<a href="https://www.facebook.com/ronan.urot.3"><i class="fab fa-facebook-f"></i></a>
 			<a href="https://discord.com/channels/@me"><i class="fab fa-discord"></i></a>
@@ -26,6 +31,7 @@
 				<section id="media">
 					</section>
 		</div>
+    </div>
     </div>
 </body>
 
