--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,9 @@
             <img src="images/me.jpg" alt="">
         <div id="media">
             <h3>Contacts</h3>
+            <i class="fa-solid fa-location-dot"></i>
+            <h2>Address</h2>
+            <p>Poblacion Camolinas Housing<br>Cordoba Cebu</br></p>
             <h4>Social Medias</h4>
         </div>
 		<div class="social">
