--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,12 @@
             <i class="fa-solid fa-location-dot"></i>
             <h2>Address</h2>
             <p>Poblacion Camolinas Housing<br>Cordoba Cebu</br></p>
+            <i class="fa-solid fa-phone"></i>
+            <h2 class="phone">Phone</h2>
+            <p class="phone">Globe: 09560748855<br></br></p>
+            <i class="fa-solid fa-envelope"></i>
+            <h2 class="email">Email</h2>
+            <p class="email">urotronan12@gmail.com</p>
             <h4>Social Medias</h4>
         </div>
 		<div class="social">
