--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,39 @@
 			<a href="https://www.facebook.com/ronan.urot.3"><i class="fab fa-facebook-f"></i></a>
 			<a href="https://discord.com/channels/@me"><i class="fab fa-discord"></i></a>
 			<a href="https://www.youtube.com/@RUCraftz"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/ronan.urot.3/"><i class="fa-brands fa-instagram"></i></a>
 				<section id="media">
 					</section>
 		</div>
     </div>
     </div>
+
+    <div class="card1">
+        <h5>Keinji Suan</h5>
+        <img src="images/kein.jpg" alt="">
+    <div id="media1">
+        <h3>Contacts</h3>
+        <i class="fa-solid fa-location-dot"></i>
+        <h2>Address</h2>
+        <p>Poblacion Camolinas Housing<br>Cordoba Cebu</br></p>
+        <i class="fa-solid fa-phone"></i>
+        <h2 class="phone">Phone</h2>
+        <p class="phone">Globe: 09560748855<br></br></p>
+        <i class="fa-solid fa-envelope"></i>
+        <h2 class="email">Email</h2>
+        <p class="email">urotronan12@gmail.com</p>
+        <h4>Social Medias</h4>
+    </div>
+    <div class="social1">
+        <a href="https://www.facebook.com/ronan.urot.3"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://discord.com/channels/@me"><i class="fab fa-discord"></i></a>
+        <a href="https://www.youtube.com/@RUCraftz"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.instagram.com/ronan.urot.3/"><i class="fa-brands fa-instagram"></i></a>
+            <section id="media">
+                </section>
+    </div>
+</div>
+</div>
 </body>
 
 </html>
