--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <p>Poblacion Camolinas Housing<br>Cordoba Cebu</br></p>
             <i class="fa-solid fa-phone"></i>
             <h2 class="phone">Phone</h2>
-            <p class="phone">Globe: 09560748855<br></br></p>
+            <p class="phone">09560748855<br></br></p>
             <i class="fa-solid fa-envelope"></i>
             <h2 class="email">Email</h2>
             <p class="email">urotronan12@gmail.com</p>
@@ -45,26 +45,23 @@
     </div>
 
     <div class="card1">
-        <h5>Keinji Suan</h5>
+        <h5>Keinji P. Suan</h5>
         <img src="images/kein.jpg" alt="">
     <div id="media1">
         <h3>Contacts</h3>
         <i class="fa-solid fa-location-dot"></i>
         <h2>Address</h2>
-        <p>Poblacion Camolinas Housing<br>Cordoba Cebu</br></p>
+        <p class="address">Alegria Cordova Cebu<br>Cordoba Cebu</br></p>
         <i class="fa-solid fa-phone"></i>
         <h2 class="phone">Phone</h2>
-        <p class="phone">Globe: 09560748855<br></br></p>
+        <p class="phone">09272105457<br></br></p>
         <i class="fa-solid fa-envelope"></i>
         <h2 class="email">Email</h2>
-        <p class="email">urotronan12@gmail.com</p>
+        <p class="email1">suankeinji13@gmail.com</p>
         <h4>Social Medias</h4>
     </div>
     <div class="social1">
-        <a href="https://www.facebook.com/ronan.urot.3"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://discord.com/channels/@me"><i class="fab fa-discord"></i></a>
-        <a href="https://www.youtube.com/@RUCraftz"><i class="fab fa-youtube"></i></a>
-        <a href="https://www.instagram.com/ronan.urot.3/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.facebook.com/keinji.suan.1"><i class="fab fa-facebook-f"></i></a>
             <section id="media">
                 </section>
     </div>
