--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <li><a class="content" href="contact.html"><i class="fa-solid fa-phone"></i>Contact Us</a></li>
             </ul>
         </div>
+        <div class="type">
+        <h1 class="text1">WELCOME!</h1>
+    </div>
     <div class="text">
         <h1>We are <span>Ronan Urot</span> and <span> Keinji Suan </span> a <br><span1>Future Developer</span1> and <span1>Future Programmer</span1>.</br></h1>
     </div>
