--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 <body>
     <div class="background">
         <div class="contents">
+            <h1><span>Port</span><span1>folio</span1></h1>
             <ul>
                 <li><a class="content" href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
                 <li><a class="content" href="about.html"><i class="fa-solid fa-handshake-simple"></i>About Us</a></li>
@@ -18,6 +19,7 @@
                 <li><a class="content" href="contact.html"><i class="fa-solid fa-phone"></i>Contact Us</a></li>
             </ul>
         </div>
+    
 </body>
 
 </html>
