--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 <body>
     <div class="background">
         <div class="contents">
+            <h1><span>Port</span><span1>folio</span1></h1>
             <ul>
                 <li><a class="content" href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
                 <li><a class="content" href="about.html"><i class="fa-solid fa-handshake-simple"></i>About Us</a></li>
