--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="background">
-        <div class="contents">
+    <div class="background1">
+        <div class="contents1">
             <h1><span>Port</span><span1>folio</span1></h1>
             <ul>
                 <li><a class="content" href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
@@ -20,7 +20,7 @@
                 <li><a class="content" href="contact.html"><i class="fa-solid fa-phone"></i>Contact Us</a></li>
             </ul>
         </div>
-    
+
 </body>
 
 </html>
