--- a/activity.html
+++ b/activity.html
@@ -20,6 +20,13 @@
                 <li><a class="content" href="contact.html"><i class="fa-solid fa-phone"></i>Contact Us</a></li>
             </ul>
         </div>
+
+    <div class="card2">
+    <ul>
+          <li><a class="activity" href="activityno1.html">Activity 1</a></li>
+        </ul>
+    <h1>Practice</h1>
+    </div>
 </body>
 
 </html>
