--- a/tribute.html
+++ b/tribute.html
@@ -24,9 +24,9 @@
         <img src="images/albert.jpg" alt="Scientist">
         <h1><u>Albert Einstein</u></h1>
         <p>Albert Einstein was a German-born theoretical physicist, widely acknowledged to be one of the greatest and most influential physicists of all time. Einstein is best known for developing the theory of relativity, but he also made important contributions to the development of the theory of quantum mechanics. Relativity and quantum mechanics are the two pillars of modern physics. His mass–energy equivalence formula E = mc2, which arises from relativity theory, has been dubbed "the world's most famous equation". His work is also known for its influence on the philosophy of science. He received the 1921 Nobel Prize in Physics "for his services to theoretical physics, and especially for his discovery of the law of the photoelectric effect", a pivotal step in the development of quantum theory. His intellectual achievements and originality resulted in "Einstein" becoming synonymous with "genius". Einsteinium, one of the synthetic elements in the periodic table, was named in his honor.</p>
-    </div>
-    <div class="design">
-        <img src="images/brain.png" alt="Design">
+        <div class="brain">
+            <img src="images/brain.png" alt="Design">
+        </div>
     </div>
 </body>
 
