--- a/activity.html
+++ b/activity.html
@@ -23,7 +23,7 @@
 
     <div class="card2">
     <ul>
-          <li><a class="activity" href="activityno1.html">Activity 1</a></li>
+          <li><a class="activity" href="activity1.html">Activity 1</a></li>
         </ul>
     <h1>Practice</h1>
     </div>
