--- a/activity1.html
+++ b/activity1.html
@@ -11,7 +11,7 @@
 <body>
     <div class="contentss">
         <ul>
-        <li><a class="content" href="index.html">>><i class="fa-solid fa-house"></i>Home<< </a></li>
+        <li><a class="content" href="activity.html"> >>Back<< </a></li>
         </ul>
     </div>
     <h1>
