--- a/activity.html
+++ b/activity.html
@@ -27,6 +27,18 @@
         </ul>
     <h1>Practice</h1>
     </div>
+    <div class="card4">
+        <ul>
+        <li><a class="activity" href="">Activity 2</a></li>
+        </ul>
+        <h1>None</h1>
+    </div>
+    <div class="card5">
+            <ul>
+            <li><a class="activity" href="">Activity 3</a></li>
+            </ul>
+            <h1>None</h1>
+    </div>
 </body>
 
 </html>
