--- a/about.html
+++ b/about.html
@@ -20,7 +20,17 @@
                 <li><a class="content" href="contact.html"><i class="fa-solid fa-phone"></i>Contact Us</a></li>
             </ul>
         </div>
-
+     <div class="box">
+        <div class="header">
+            <div class="profile">
+                <h1 class="name">Ronan T. Urot</h1>
+                  <h4>Student</h4>
+                 <h1 class="info">About Me</h1>
+                 <hr class="linear">
+                <img class="picture" src="images/ronan.jpg" alt="">
+            </div>
+        </div>
+     </div>
 </body>
 
 </html>
