--- a/about.html
+++ b/about.html
@@ -25,9 +25,12 @@
             <div class="profile">
                 <h1 class="name">Ronan T. Urot</h1>
                   <h4>Student</h4>
-                 <h1 class="info">About Me</h1>
+                 <h1 class="about">About Me</h1>
                  <hr class="linear">
-                <img class="picture" src="images/ronan.jpg" alt="">
+                 <p class="aboutme">A student at Cordova Public College,<br> 19 years old, dedicated to learning <br>web development and programming.</p>
+                 <h1 class="contact">My Contact</h1>
+                 <hr class="linear1">
+                 <img class="picture" src="images/ronan.jpg" alt="">
             </div>
         </div>
      </div>
