--- a/about.html
+++ b/about.html
@@ -29,7 +29,19 @@
                  <hr class="linear">
                  <p class="aboutme">A student at Cordova Public College,<br> 19 years old, dedicated to learning <br>web development and programming.</p>
                  <h1 class="contact">My Contact</h1>
+                 <i id="email" class="fa-solid fa-envelope"></i>
+                 <p id="fill">urotronan12@gmail.com</p>
+                 <i id="phone" class="fa-solid fa-phone"></i>
+                 <p id="fill1">09560748855</p>
+                 <i id="address" class="fa-solid fa-location-dot"></i>
+                 <p id="fill2">Poblacion, Cordova, Cebu</p>
                  <hr class="linear1">
+                 <h1 class="education">Educational Background</h1>
+                 <hr class="linear2">
+                 <h3 id="year">2015-2016</h3>
+                 <p id="level">Elementary</p>
+                 <h3 id="school">Cordova Central School</h3>
+                 <p id="place">Poblacion Cordova Cebu</p>
                  <img class="picture" src="images/ronan.jpg" alt="">
             </div>
         </div>
