--- a/about.html
+++ b/about.html
@@ -38,10 +38,22 @@
                  <hr class="linear1">
                  <h1 class="education">Educational Background</h1>
                  <hr class="linear2">
-                 <h3 id="year">2015-2016</h3>
+
+                 <h3 id="year">2015 - 2016</h3>
                  <p id="level">Elementary</p>
                  <h3 id="school">Cordova Central School</h3>
                  <p id="place">Poblacion Cordova Cebu</p>
+                 
+                 <h3 id="year1">2021 - 2022</h3>
+                 <p id="level1">Secondary</p>
+                 <h3 id="school1">Cordova National High School</h3>
+                 <p id="place1">Day-as Cordova Cebu</p>
+
+                 <h3 id="year2">2022 - Present</h3>
+                 <p id="level2">College</p>
+                 <h3 id="school2">Cordova Public College</h3>
+                 <p id="place2">Gabi Cordova Cebu</p>
+
                  <img class="picture" src="images/ronan.jpg" alt="">
             </div>
         </div>
