--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
                  <h1 class="about">About Me</h1>
                  <hr class="linear">
                  <p class="aboutme">A student at Cordova Public College,<br> 19 years old, dedicated to learning <br>web development and programming.</p>
+                 
                  <h1 class="contact">My Contact</h1>
                  <i id="email" class="fa-solid fa-envelope"></i>
                  <p id="fill">urotronan12@gmail.com</p>
@@ -36,9 +37,9 @@
                  <i id="address" class="fa-solid fa-location-dot"></i>
                  <p id="fill2">Poblacion, Cordova, Cebu</p>
                  <hr class="linear1">
+
                  <h1 class="education">Educational Background</h1>
                  <hr class="linear2">
-
                  <h3 id="year">2015 - 2016</h3>
                  <p id="level">Elementary</p>
                  <h3 id="school">Cordova Central School</h3>
@@ -54,6 +55,13 @@
                  <h3 id="school2">Cordova Public College</h3>
                  <p id="place2">Gabi Cordova Cebu</p>
 
+                 <h1 class="rewards">Achievements</h1>
+                 <hr class="linear3">
+                 <ul>
+                 <li id="award1">Honor Student</li>
+                 <li id="award2">Best in Science</li>
+                 <li id="award3">Best in Math</li>
+                </ul>
                  <img class="picture" src="images/ronan.jpg" alt="">
             </div>
         </div>
