--- a/about.html
+++ b/about.html
@@ -62,6 +62,22 @@
                  <li id="award2">Best in Science</li>
                  <li id="award3">Best in Math</li>
                 </ul>
+
+                 <h1 class="qualify">Qualifications</h1>
+                 <hr class="linear4">
+                 <ul>
+                    <li id="qualify1">College Degree</li>
+                    <li id="qualify2">Good Communication Skills</li>
+                    <li id="qualify3">Positive Attitude</li>
+                    <li id="qualify4">Dependability</li>
+                 </ul>
+
+                 <h1 class="character">Character References</h1>
+                 <hr class="linear5">
+                 <h3 id="name1">Carlo Melendres</h3>
+                 <p id="department"><b>Department &nbsp;:</b> Department of Education</p>
+                 <p id="position"><b>Position &nbsp;&nbsp;&nbsp;:</b> ICT Teacher</p>
+                 <p id="contact"><b>Contact no. :</b> 09556432412</p>
                  <img class="picture" src="images/ronan.jpg" alt="">
             </div>
         </div>
