--- a/about.html
+++ b/about.html
@@ -76,9 +76,72 @@
                  <hr class="linear5">
                  <h3 id="name1">Carlo Melendres</h3>
                  <p id="department"><b>Department &nbsp;:</b> Department of Education</p>
-                 <p id="position"><b>Position &nbsp;&nbsp;&nbsp;:</b> ICT Teacher</p>
-                 <p id="contact"><b>Contact no. :</b> 09556432412</p>
+                 <p id="position"><b>Position &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b> ICT Teacher</p>
+                 <p id="contact"><b>Contact no. &nbsp;:</b> 09556432412</p>
                  <img class="picture" src="images/ronan.jpg" alt="">
+            </div>
+        </div>
+     </div>
+
+     <div class="box1">
+        <div class="header1">
+            <div class="profile1">
+                <h1 class="name1">Keinji P. Suan</h1>
+                  <h4>Student</h4>
+                 <h1 class="about1">About Me</h1>
+                 <hr class="linear6">
+                 <p class="aboutme1">A student at Cordova Public College,<br> 19 years old, dedicated to learning <br>web development and programming.</p>
+                 
+                 <h1 class="contact1">My Contact</h1>
+                 <i id="email1" class="fa-solid fa-envelope"></i>
+                 <p id="fill3">urotronan12@gmail.com</p>
+                 <i id="phone1" class="fa-solid fa-phone"></i>
+                 <p id="fill4">09560748855</p>
+                 <i id="address1" class="fa-solid fa-location-dot"></i>
+                 <p id="fill5">Poblacion, Cordova, Cebu</p>
+                 <hr class="linear7">
+
+                 <h1 class="education1">Educational Background</h1>
+                 <hr class="linear8">
+                 <h3 id="year1">2015 - 2016</h3>
+                 <p id="level1">Elementary</p>
+                 <h3 id="school1">Cordova Central School</h3>
+                 <p id="place1">Poblacion Cordova Cebu</p>
+                 
+                 <h3 id="year2">2021 - 2022</h3>
+                 <p id="level2">Secondary</p>
+                 <h3 id="school2">Cordova National High School</h3>
+                 <p id="place2">Day-as Cordova Cebu</p>
+
+                 <h3 id="year3">2022 - Present</h3>
+                 <p id="level3">College</p>
+                 <h3 id="school3">Cordova Public College</h3>
+                 <p id="place3">Gabi Cordova Cebu</p>
+
+                 <h1 class="rewards1">Achievements</h1>
+                 <hr class="linear9">
+                 <ul>
+                 <li id="award4">Honor Student</li>
+                 <li id="award5">Best in Science</li>
+                 <li id="award6">Best in Math</li>
+                </ul>
+
+                 <h1 class="qualify1">Qualifications</h1>
+                 <hr class="linear10">
+                 <ul>
+                    <li id="qualify5">College Degree</li>
+                    <li id="qualify6">Good Communication Skills</li>
+                    <li id="qualify7">Positive Attitude</li>
+                    <li id="qualify8">Dependability</li>
+                 </ul>
+
+                 <h1 class="character1">Character References</h1>
+                 <hr class="linear11">
+                 <h3 id="name2">Carlo Melendres</h3>
+                 <p id="department1"><b>Department &nbsp;:</b> Department of Education</p>
+                 <p id="position1"><b>Position &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b> ICT Teacher</p>
+                 <p id="contact1"><b>Contact no. &nbsp;:</b> 09556432412</p>
+                 <img class="picture2" src="images/ronan.jpg" alt="">
             </div>
         </div>
      </div>
