--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
                  <p id="department1"><b>Department &nbsp;:</b> Department of Education</p>
                  <p id="position1"><b>Position &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b> ICT Teacher</p>
                  <p id="contact1"><b>Contact no. &nbsp;:</b> 09556432412</p>
-                 <img class="picture2" src="images/ronan.jpg" alt="">
+                 <img class="picture2" src="images/keinji.jpg" alt="">
             </div>
         </div>
      </div>
