--- a/about.html
+++ b/about.html
@@ -79,6 +79,11 @@
                  <p id="position"><b>Position &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b> ICT Teacher</p>
                  <p id="contact"><b>Contact no. &nbsp;:</b> 09556432412</p>
                  <img class="picture" src="images/ronan.jpg" alt="">
+                 <div class="footer">
+                 </div>
+                 <div class="leftside">
+                    <div class="rightside"></div>
+                 </div>
             </div>
         </div>
      </div>
