--- a/about.html
+++ b/about.html
@@ -147,6 +147,11 @@
                  <p id="position1"><b>Position &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b> ICT Teacher</p>
                  <p id="contact1"><b>Contact no. &nbsp;:</b> 09556432412</p>
                  <img class="picture2" src="images/keinji.jpg" alt="">
+                 <div class="footer1">
+                </div>
+                <div class="leftside1">
+                   <div class="rightside1"></div>
+                </div>
             </div>
         </div>
      </div>
