--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="contents">
             <h1><span>Port</span><span1>folio</span1></h1>
             <ul>
-                <li><a class="content" href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li class="active"><a class="content" href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
                 <li><a class="content" href="about.html"><i class="fa-solid fa-handshake-simple"></i>About Us</a></li>
                 <li><a class="content" href="activity.html"><i class="fa-solid fa-book"></i>Activities</a></li>
                 <li><a class="content" href="tribute.html"><i class="fa-solid fa-gift"></i>Tribute</a></li>
